# Checkers_CPP_Library

./: CMakeLists.txt  README.md
Headers/: Board.h  Game_Board.h  Piece.h
ImplementationFiles/: Board.cpp  Game_Board.cpp  Piece.cpp
